[project]
name = "ml-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pylint>=3.3.8",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
